[gd_scene load_steps=3 format=3 uid="uid://c5x7ph6tqdf08"]

[ext_resource type="Script" uid="uid://da3mii20clos5" path="res://UI/main_menu.gd" id="1_tk8dj"]
[ext_resource type="Texture2D" uid="uid://c8n2kvbfrb1uw" path="res://UI/Gemini_Generated_Image_bqduhabqduhabqdu (1).png" id="2_d8nwk"]

[node name="Main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tk8dj")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -335.0
offset_right = 5.0
offset_bottom = 341.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_d8nwk")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Start" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play game"

[node name="Achievements" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Achievements"

[node name="Settings" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="Exit" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Exit"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Achievements" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
